--- a/web/ff/elimar.html
+++ b/web/ff/elimar.html
@@ -7,17 +7,21 @@
 
 async="async"></script>
   </head>
-  <body><font size="4"><span>Ce film, tiré d'une histoire vraie, peut être vu
-        soit par le lecteur A (lecteur du haut), soit, en déroulant la page, par
-        le lecteur B (lecteur du bas). Le bouton de la vue élargie est au coin
-        supérieur droit pour le lecteur A, et au coin inférieur droit pour le
-        lecteur B. Le lecteur A, plus sophistiqué, met plus de temps à démarrer.
-        Le lecteur B, étant vieux, ne marche que s'il y a "adobe flash player"
-        déjà installé. Une fois n'est pas coutume, le lecteur B est ici branché
-        sur un fichier vidéo HD, ce qui n'est pas le cas cette fois-ci pour le
+  <body><font size="4"><span>Ce film, tirÃ© d'une histoire vraie, peut Ãªtre vu
+        soit par le lecteur A (lecteur du haut), soit, en dÃ©roulant la page, par
+        le lecteur B (lecteur du bas). Le bouton de la vue Ã©largie est au coin
+        supÃ©rieur droit pour le lecteur A, et au coin infÃ©rieur droit pour le
+        lecteur B. Le lecteur A, plus sophistiquÃ©, met plus de temps Ã  dÃ©marrer.
+        Le lecteur B, Ã©tant vieux, ne marche que s'il y a "adobe flash player"
+        dÃ©jÃ  installÃ©. Une fois n'est pas coutume, le lecteur B est ici branchÃ©
+        sur un fichier vidÃ©o HD, ce qui n'est pas le cas cette fois-ci pour le
         lecteur A.</span></font>
     <p></p>
-    <iframe<script type="text/javascript" src="//ra.revolvermaps.com/0/0/9.js?i=09biffbn5qi&amp;t=." async="async"></script></iframe>
+    <iframe src="//videa.hu/player?v=9ba3jleTEEMlZ5Yj" allowfullscreen="allowfullscreen"
+
+      webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen"
+
+      width="768" height="432" frameborder="0"></iframe>
     <p>&nbsp;</p>
     <embed src="https://luysyta.github.io/jynaty/web/ff/gddflvplayer.swf" flashvars="? &amp; autoplay=false &amp; 
 loop=true&amp;sound=80&amp;buffer=2&amp;vdo=https://vip-video1060.fc2.com/up/flv/201906/14/E/20190614EwmGgsDq.flv?mid=427c96bb66abc9ea35e85dca75f88bad"
