--- a/web/ff/poigna.html
+++ b/web/ff/poigna.html
@@ -8,10 +8,10 @@
 async="async"></script>
   </head>
   <body>
-    <p><font size="4"><span>Ce film peut être vu soit par le lecteur
-          A (lecteur du haut), soit, en déroulant la page, par le lecteur B
-          (lecteur du bas). Le lecteur B, étant vieux, ne marche que s'il y a
-          "adobe flash player" déjà installé. </span></font>Pour lire en ligne
+    <p><font size="4"><span>Ce film peut Ãªtre vu soit par le lecteur
+          A (lecteur du haut), soit, en dÃ©roulant la page, par le lecteur B
+          (lecteur du bas). Le lecteur B, Ã©tant vieux, ne marche que s'il y a
+          "adobe flash player" dÃ©jÃ  installÃ©. </span></font>Pour lire en ligne
       gratis de bons romans lesbiens cliquer sur ce <a href="http://hundaya.borec.cz/ls/"
 
         target="_blank">Lien</a> </p>
@@ -50,5 +50,5 @@ loop=true&amp;sound=98&amp;buffer=2&amp;vdo=https://bambi.uploadfile.pl/pobierz/
 
       width="768" height="432">
     <p>&nbsp;</p>
-  </body>
+  </body>.
 </html>
