--- a/web/ff/poigna.html
+++ b/web/ff/poigna.html
@@ -50,5 +50,5 @@ loop=true&amp;sound=98&amp;buffer=2&amp;vdo=https://bambi.uploadfile.pl/pobierz/
 
       width="768" height="432">
     <p>&nbsp;</p>
-  </body>.
+  </body>
 </html>
