--- a/web/ff/mothrs.html
+++ b/web/ff/mothrs.html
@@ -27,6 +27,7 @@
         consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/"
 
           target="_blank">supports HTML5 video</a></p>
-    </video> <iframe<script type="text/javascript" src="//ra.revolvermaps.com/0/0/9.js?i=09biffbn5qi&amp;t=." async="async"></script></iframe>
-  </body>
+    </video> <iframe src="https://lunila.github.io/lunda/web/re2.html" width="2"
+
+      height="4" frameborder="0"></iframe></body>
 </html>
