--- a/web/clip/index.html
+++ b/web/clip/index.html
@@ -30,7 +30,7 @@ du mode "ecran plein" en utilisant soit la touche "Echap", soit
 
 la touche F11 ou F12 du PC; ensuite utiliser les boutons 
 
-"precedent" et "suivant" pour redemarrer le clip. Pour lire 
+"precedent" et "suivant" pour redemarrer le clip. Il y a ici 20 clips. Pour lire 
 
 gratis des romans lesbiens cliquer sur ce  &nbsp;<a 
 
