--- a/web/lula/index.html
+++ b/web/lula/index.html
@@ -6,7 +6,7 @@
   <body>Pour ecouter et lire gratis d'autres romans lesbiens cliquer
     <a href="http://hundaya.borec.cz/ls/" target="_blank">ICI</a>
     <meta name="viewport" content="width=device-width">
-    <title>livre audio elula perrin</title>
+    <title>livre audio lesbien elula ebook gratuit </title>
     <!-- Insert to your webpage before the </head> -->
     <script src="audioplayerengine/jquery.js"></script>
     <script src="audioplayerengine/amazingaudioplayer.js"></script>
