--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -664,17 +664,21 @@
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
-            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/summr.html" target="_blank"
+            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/summr.html"
 
-              title="summr.html">099</a></font></font></span><span><font size="4"><font
+              target="_blank" title="summr.html">099</a></font></font></span><span><font
 
-            size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/kant.html"
+          size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
-              target="_blank" title="kant.html">100</a></font></font></span><font
+                      size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-        size="4"><span><b><span style="color: #0000ee;"><font size="5">&nbsp;&nbsp;
-                </font></span></b></span></font><font size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
+              href="https://luysyta.github.io/jynaty/web/ff/kant.html" target="_blank"
+
+              title="kant.html">100</a></font></font></span><font size="4"><span><b><span
+
+              style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
+
+        size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
           size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/debs.html"
 
@@ -758,17 +762,21 @@
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
-            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/allur.html" target="_blank"
+            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/allur.html"
 
-              title="allur.html">114</a></font></font></span><span><font size="4"><font
+              target="_blank" title="allur.html">114</a></font></font></span><span><font
 
-            size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/signat.html"
+          size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
-              target="_blank" title="signat.html">115</a></font></font></span><font
+                      size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-        size="4"><span><b><span style="color: #0000ee;"><font size="5">&nbsp;&nbsp;
-                </font></span></b></span></font><font size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
+              href="https://luysyta.github.io/jynaty/web/ff/signat.html" target="_blank"
+
+              title="signat.html">115</a></font></font></span><font size="4"><span><b><span
+
+              style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
+
+        size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
           size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/mstraw.html"
 
@@ -852,17 +860,21 @@
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
-            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/lilies.html" target="_blank"
+            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/lilies.html"
 
-              title="lilies.html">129</a></font></font></span><span><font size="4"><font
+              target="_blank" title="lilies.html">129</a></font></font></span><span><font
 
-            size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/como.html"
+          size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
-              target="_blank" title="como.html">130</a></font></font></span><font
+                      size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-        size="4"><span><b><span style="color: #0000ee;"><font size="5">&nbsp;&nbsp;
-                </font></span></b></span></font><font size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
+              href="https://luysyta.github.io/jynaty/web/ff/como.html" target="_blank"
+
+              title="como.html">130</a></font></font></span><font size="4"><span><b><span
+
+              style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
+
+        size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
           size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/bride.html"
 
@@ -946,14 +958,17 @@
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
-            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/summr.html" target="_blank"
+            size="5"><a href="https://luysyta.github.io/jynaty/web/ff/aln.1.2.html"
 
-              title="summr.html"></a></font></font></span><span><font size="4"><font
+              target="_blank" title="als2.html">144</a></font></font></span><span><font
 
-            size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/kant.html"
+          size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
-              target="_blank" title="kant.html"></a></font></font></span><font size="4"><span><b><span
+                      size="4">&nbsp;&nbsp; </font></span></font></font></span><a
+
+              href="https://luysyta.github.io/jynaty/web/ff/kant.html" target="_blank"
+
+              title="kant.html"></a></font></font></span><font size="4"><span><b><span
 
               style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
 
