--- a/web/ff/aln.1.2.html
+++ b/web/ff/aln.1.2.html
@@ -11,11 +11,11 @@ async="async"></script>
   </head>
   <body> 
     Dans ce
-    film de science-fiction célèbre il n'y a ni relation hétéro ni relation
-    homo, mais une personnalité lesbienne ne peut qu'apprécier qu'il n'y ait pas
-    ici un héros mais une héroïne qui de plus, s'attache fortement à une
-    fillette en danger qu'elle va protéger maternellement. Il faut utiliser le
-    lecteur du haut pour voir la 1ere partie et celui du bas (DÉROULER LA PAGE)
+    film de science-fiction cÃ©lÃ¨bre il n'y a ni relation hÃ©tÃ©ro ni relation
+    homo, mais une personnalitÃ© lesbienne ne peut qu'apprÃ©cier qu'il n'y ait pas
+    ici un hÃ©ros mais une hÃ©roÃ¯ne qui de plus, s'attache fortement Ã  une
+    fillette en danger qu'elle va protÃ©ger maternellement. Il faut utiliser le
+    lecteur du haut pour voir la 1ere partie et celui du bas (DÃ‰ROULER LA PAGE)
     pour voir la 2eme partie. <video id="example_video_1" class="video-js vjs-default-skin"
 
       controls="controls" preload="none" poster="https://luysyta.github.io/jynaty/web/im/aln1.jpg"
@@ -53,4 +53,4 @@ async="async"></script>
     </video>
     <p>&nbsp;</p>
   </body>
-</html>
+ </html>
