--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -960,23 +960,23 @@
 
             size="5"><a href="https://luysyta.github.io/jynaty/web/ff/aln.1.2.html"
 
-              target="_blank" title="als2.html">144</a></font></font></span><span><font
+              target="_blank" title="aln.1.2.html">144</a></font></font></span><span><font
 
           size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/kant.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/bbee.html" target="_blank"
 
-              title="kant.html"></a></font></font></span><font size="4"><span><b><span
+              title="bbee.html">145</a></font></font></span><font size="4"><span><b><span
 
               style="color: #0000ee;"><font size="5">&nbsp;&nbsp; </font></span></b></span></font><font
 
         size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/debs.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/trmn.2.3.html"
 
-              target="_blank" title="debs.html"></a></font></font></span><span><font
+              target="_blank" title="trmn.2.3.html">146</a></font></font></span><span><font
 
           size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
@@ -1045,4 +1045,4 @@
     <p><br>
     </p>
   </body>
- </html>
+</html>
