--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Livres lesbiens gratuits romans lesbiens livres audio lesbiens
-      gratuits ecouter en ligne</title>
+      gratuits ecouter en ligne</title>.
   </head>
    <body>
     <p>&nbsp;<a href="http://hundaya.borec.cz/ls/" target="_blank">http://hundaya.borec.cz/ls/</a>&nbsp;
