--- a/web/ff/elimar.html
+++ b/web/ff/elimar.html
@@ -13,9 +13,9 @@ async="async"></script>
         supérieur droit pour le lecteur A, et au coin inférieur droit pour le
         lecteur B. Le lecteur A, plus sophistiqué, met plus de temps à démarrer.
         Le lecteur B, étant vieux, ne marche que s'il y a "adobe flash player"
-        déjà installé. Une fois n'est pas coutume, le lecteur B est ici branché
-        sur un fichier vidéo HD, ce qui n'est pas le cas cette fois-ci pour le
-        lecteur A.</span></font>
+        déjà installé. Sinon il y a aussi cet AUTRE LECTEUR: </span></font><a href="https://luysyta.github.io/jynaty/web/ff/elimar2.html"
+
+      target="">cliquer</a>
     <p></p>
     <iframe src="//videa.hu/player?v=9ba3jleTEEMlZ5Yj" allowfullscreen="allowfullscreen"
 
