--- a/web/ff/poigna.html
+++ b/web/ff/poigna.html
@@ -7,15 +7,10 @@
 
 async="async"></script>
   </head>
-  <body>
-    <p><font size="4"><span>Ce film peut être vu soit par le lecteur
-          A (lecteur du haut), soit, en déroulant la page, par le lecteur B
-          (lecteur du bas). Le lecteur B, étant vieux, ne marche que s'il y a
-          "adobe flash player" déjà installé. </span></font>Pour lire en ligne
-      gratis de bons romans lesbiens cliquer sur ce <a href="http://hundaya.borec.cz/ls/"
+  <body> <font size="4"><span>Si cela ne marche vraiment plus ici,
+        essayer cet AUTRE LECTEUR:</span></font> <a href="https://luysyta.github.io/jynaty/web/ff/poigna2.html"
 
-        target="_blank">Lien</a> </p>
-    <p></p>
+      target="">cliquer</a>
     <link href="https://lunila.github.io/agna/vd/video-js.css" rel="stylesheet">
     <script src="https://lunila.github.io/agna/vd/ie8/videojs-ie8.min.js"></script>
     <script src="https://lunila.github.io/agna/vd/video.js"></script> <video id="example_video_1"
@@ -24,13 +19,11 @@ async="async"></script>
 
       data-setup="{}" width="768" height="432"> <source src="https://megadrive.pl/download-file/110588"
 
-        type="video/mp4"> <source src="https://www.jottacloud.com/opin/io/downloadPublic/5c5423a98697740
+        type="video/mp4"> <source src="https://www.jottacloud.com/opin/io/downloadPublic/5c5423a9869774015dda06d5/@5bb9b45fb40b4757bebf9ebf492c1dd1"
 
-15dda06d5/@5bb9b45fb40b4757bebf9ebf492c1dd1" type="video/mp4"> <source src=""
+        type="video/mp4"> <source src="" type="video/ogg"> <track kind="captions"
 
-        type="video/ogg"> <track kind="captions" src="../shared/example-captions.vtt"
-
-        srclang="en" label="English">
+        src="../shared/example-captions.vtt" srclang="en" label="English">
       <!-- Tracks need an ending tag thanks to IE9 --> <track kind="subtitles"
 
         src="../shared/example-captions.vtt" srclang="en" label="English">
@@ -40,15 +33,6 @@ async="async"></script>
 
           target="_blank">supports HTML5 video</a></p>
     </video>
-    <p>&nbsp;</p>
-    <embed src="https://luysyta.github.io/jynaty/web/ff/gddflvplayer.swf" flashvars="? &amp; autoplay=true &amp; 
-loop=true&amp;sound=98&amp;buffer=2&amp;vdo=https://bambi.uploadfile.pl/pobierz/1767180---ncdz.html"
-
-      allowfullscreen="true" quality="best" wmode="transparent" allowscriptaccess="always"
-
-      p="" luginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"
-
-      width="768" height="432">
     <p>&nbsp;</p>
   </body>
 </html>
