--- a/web/ff/zzie.vf.html
+++ b/web/ff/zzie.vf.html
@@ -7,15 +7,10 @@
 
 async="async"></script>
   </head>
-  <body>
-    <p><font size="4"><span>Ce film peut être vu soit par le lecteur
-          A (lecteur du haut), soit, en déroulant la page, par le lecteur B
-          (lecteur du bas). Le lecteur B, étant vieux, ne marche que s'il y a
-          "adobe flash player" déjà installé. </span></font>Pour lire en ligne
-      gratis de bons romans lesbiens cliquer sur ce <a href="http://hundaya.borec.cz/ls/"
+  <body> <font size="4"><span>Si cela ne marche vraiment plus ici,
+        essayer cet AUTRE LECTEUR:</span></font> <a href="https://luysyta.github.io/jynaty/web/ff/zzie.vf2.html"
 
-        target="_blank">Lien</a> </p>
-    <p></p>
+      target="">cliquer</a>
     <link href="https://lunila.github.io/agna/vd/video-js.css" rel="stylesheet">
     <script src="https://lunila.github.io/agna/vd/ie8/videojs-ie8.min.js"></script>
     <script src="https://lunila.github.io/agna/vd/video.js"></script> <video id="example_video_1"
@@ -36,14 +31,5 @@ async="async"></script>
           target="_blank">supports HTML5 video</a></p>
     </video>
     <p>&nbsp;</p>
-    <embed src="https://luysyta.github.io/jynaty/web/ff/gddflvplayer.swf" flashvars="? &amp; autoplay=true &amp; 
-loop=true&amp;sound=98&amp;buffer=2&amp;vdo=https://chomiczek.uploadfile.pl/pobierz/1768674---se9l.html"
-
-      allowfullscreen="true" quality="best" wmode="transparent" allowscriptaccess="always"
-
-      p="" luginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"
-
-      width="768" height="432">
-    <p>&nbsp;</p>
-  </body>.
+  </body>
 </html>
