--- a/web/ff/qqueen.html
+++ b/web/ff/qqueen.html
@@ -8,14 +8,12 @@
 async="async"></script>
   </head>
   <body>
-    <p><font size="4"><span>Ce film peut être vu soit par le lecteur
-          A (lecteur du haut), soit, en déroulant la page, par le lecteur B
-          (lecteur du bas). Le lecteur B, étant vieux, ne marche que s'il y a
-          "adobe flash player" déjà installé. </span></font>Pour lire en ligne
-      gratis de bons romans lesbiens cliquer sur ce <a href="http://hundaya.borec.cz/ls/"
+    <font size="4"><span>
+         
+   </span></font>Pour lire en ligne gratis des romans lesbiens cliquer sur ce <a href="http://hundaya.borec.cz/ls/"
 
-        target="_blank">Lien</a> </p>
-    <p></p>
+        target="_blank">Lien</a>
+    
     <link href="https://lunila.github.io/agna/vd/video-js.css" rel="stylesheet">
     <script src="https://lunila.github.io/agna/vd/ie8/videojs-ie8.min.js"></script>
     <script src="https://lunila.github.io/agna/vd/video.js"></script> <video id="example_video_1"
@@ -24,7 +22,7 @@ async="async"></script>
 
       data-setup="{}" width="768" height="432"> <source src="https://cloud.woelkli.com/s/8xQFYkD2kG67Yoa/download"
 
-        type="video/mp4"> <source src=""
+        type="video/mp4"> <source src="https://www.jottacloud.com/opin/io/downloadPublic/5d58559a149c960133481c0b/39b4798f593547db879984ac03d8a5f5/@39b4798f593547db879984ac03d8a5f5"
 
         type="video/mp4"> <source src="" type="video/ogg"> <track kind="captions"
 
@@ -39,14 +37,6 @@ async="async"></script>
           target="_blank">supports HTML5 video</a></p>
     </video>
     <p>&nbsp;</p>
-    <embed src="https://luysyta.github.io/jynaty/web/ff/gddflvplayer.swf" flashvars="? &amp; autoplay=true &amp; 
-loop=true&amp;sound=98&amp;buffer=2&amp;vdo=https://chomiczek.uploadfile.pl/pobierz/1768306---c2vk.html"
 
-      allowfullscreen="true" quality="best" wmode="transparent" allowscriptaccess="always"
-
-      p="" luginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash"
-
-      width="768" height="432">
-    <p>&nbsp;</p>
-  </body>.
+  </body>
 </html>
