--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -4,8 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Livres lesbiens gratuits romans lesbiens livres audio lesbiens
       gratuits ecouter en ligne</title>
-   </head>
-   <body>
+  </head>
+  <body>
     <p>&nbsp;<a href="http://hundaya.borec.cz/ls/" target="_blank">http://hundaya.borec.cz/ls/</a>&nbsp;
       Cliquer sur ce lien pour lire en ligne gratis de bons romans lesbiens.<br>
       <font size="4"><span></span></font></p>
@@ -982,9 +982,9 @@
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/contrct.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/dmnd.html" target="_blank"
 
-              title="contrct.html"></a><span><font size="4"><font size="5"><span><font
+              title="dmnd.html">147</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
