--- a/web/ff/prfc.html
+++ b/web/ff/prfc.html
@@ -10,7 +10,7 @@
     <script src="https://lunila.github.io/agna/vd/ie8/videojs-ie8.min.js"></script>
     <script src="https://lunila.github.io/agna/vd/video.js"></script> <video id="example_video_1"
 
-      class="video-js vjs-default-skin" controls="controls" preload="none" poster="https://luysyta.github.io/jynaty/web/im/prfc.jpg"
+      class="video-js vjs-default-skin" controls="controls" preload="none" poster="http://wunny.gitlab.io/ryla/btw/im/prfc.jpg"
 
       data-setup="{}" width="768" height="432"> <source src="https://emma.cloud.tabdigital.eu/s/ks3RLqKdrXaGMSP/download"
 
