--- a/web/ff/dmerc.html
+++ b/web/ff/dmerc.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <title>CINEMA LESBIEN GRATUIT</title>
+    <title>CINEMA LESBIEN GRATUIT</title><script type="text/javascript" src="//rf.revolvermaps.com/0/0/9.js?i=5s4eeovi9n9&t=."
+async="async"></script>
   </head>
   <body>Pour lire en ligne gratis de bons romans lesbiens cliquer
     sur ce <a href="http://hundaya.borec.cz/ls/" target="_blank">Lien</a>
@@ -27,7 +28,7 @@
         consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/"
 
           target="_blank">supports HTML5 video</a></p>
-    </video> <iframe<script type="text/javascript" src="//ra.revolvermaps.com/0/0/9.js?i=09biffbn5qi&amp;t=." async="async"></script></iframe>
+    </video>
   </body>
 </html>
 
