--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1117,9 +1117,9 @@
 
                       size="4">&nbsp;&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/bffs.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/fxfr.html" target="_blank"
 
-              title="bffs.html"></a></font></font></span><span><font size="4"><font
+              title="fxfr.html">168</a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
                       </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/papa.html"
