--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1149,9 +1149,9 @@
               title="serv.silnce.html">172</a></font></font></span><span><font size="4"><font
 
             size="5"><span><font size="4"><font size="5"><span><font size="4">&nbsp;&nbsp;
-                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/eloise.html"
+                      </font></span></font></font></span><a href="https://luysyta.github.io/jynaty/web/ff/mimdr.html"
 
-              target="_blank" title="eloise.html"></a></font></font></span><font
+              target="_blank" title="mimdr.html">173</a></font></font></span><font
 
         size="4"><span><b>&nbsp;&nbsp; </b></span></font><span><font size="4"><font
 
