--- a/web/ff/fflist.html
+++ b/web/ff/fflist.html
@@ -1171,17 +1171,17 @@
 
         size="4"><span><b><span style="color: #0000ee;"></span></b></span></font><span><font
 
-          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/bride.html"
+          size="4"><font size="5"><a href="https://luysyta.github.io/jynaty/web/ff/srpris.html"
 
-              target="_blank" title="bride.html"></a></font></font></span><span><font
+              target="_blank" title="srpris.html">176</a></font></font></span><span><font
 
           size="4"><font size="5"><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
-              href="https://luysyta.github.io/jynaty/web/ff/joven.html" target="_blank"
+              href="https://luysyta.github.io/jynaty/web/ff/mllion.html" target="_blank"
 
-              title="joven.html"></a><span><font size="4"><font size="5"><span><font
+              title="mllion.html">177</a><span><font size="4"><font size="5"><span><font
 
                       size="4">&nbsp;&nbsp; </font></span></font></font></span><a
 
